替换 JWT 实现为 jjwt。